# theo-lang

./: .gitignore  README.md  makefile  pyproject.toml  test.func  test.theo
app/: ast.py  emitter.py  keywords.py  lexer.py  main.py  parser.py  processor.py  reader.py  token.py  tokenize.py  tokens.py
app/emitter/: __init__.py
app/lexer/: __init__.py  core.py  keywords.py  lex_funcs.py  lexer.py  token.py
app/lexer/tests/: test_identifier.py  test_lex_char.py  test_lex_comments.py  test_number.py  test_string.py  test_white_space.py
app/parser/: ast.py  parser.py  symbols.py
app/parser/tests/: test_parser.py
app/tests/: test_identifier.py  test_lex_char.py  test_lex_comments.py  test_lexer.py  test_number.py  test_parser.py  test_string.py
app_nim/: main  main.nim
app_nim/lexer/: core.nim  keywords.nim  lex_funcs.nim  token.nim
app_nim/parser/: main.nim
doc/: TODO.md  book.toml  core_modules.md  design.md  grammar.ebnf  modules.md  operators.md  scopes.md  structs.md  types.md
doc/core/: functions.md  loops.md  modules.md  operators.md  scopes.md  structs.md  unions.md  with.md
doc/src/: SUMMARY.md  TODO.md  design.md  grammar.ebnf
doc/src/types/: int.md  (+8 more)
doc/stdlib/: booleans.md  concurrency.md
doc/syntax/: func.vim
doc/types/: collections.md  core.md
java/: settings.gradle.kts
java/app/: build.gradle.kts
samples/: Option.func  Rect.func  Rect1.func  ast.func  blah.func  builder.theo  main.func  mymod.func  test.theo  test_parse.txt
samples/old/: ast.func  blah.func  core.func  test.func
stdlib/: concurrency.md
syntax/: func.vim
(+79 files in other folders)
