[project]
name = "theo-lang"
version = "0.1.0"
description = "A programming language that does stuff"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.10.6",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "toml>=0.10.2",
]

[tool.coverage.run]
branch = true
command_line = "-m unittest -v"
source = ["app"]

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"
